# 11-Autenticação/ExpAPI/backend/src/resources/compra/compra.types.ts
@@ -1,0 +1,8 @@
+import { CompraProduto } from "@prisma/client";
+
+export type CreateCompraDto = Pick<CompraProduto, "produtoID" | "usuarioID" | "quantidade">
+
+export type CompraDto = Pick<
+  CompraProduto,
+  "id" |"usuarioID" | "produtoID" | "quantidade"
+>;
