# 11-Autenticação/ExpAPI/backend/src/router/v1Router.ts
@@ -3,6 +3,7 @@ import produtoRouter from "../resources/produto/produto.router";
 import languageRouter from "../resources/language/language.router";
 import usuarioRouter from "../resources/usuario/usuario.router";
 import authRouter from "../resources/auth/auth.router";
+import compraRouter from "../resources/compra/compra.router"
 
 const router = Router();
 
@@ -14,5 +15,7 @@ router.use("/usuario", // #swagger.tags = ['Usuario']
 usuarioRouter);
 router.use("/auth", // #swagger.tags = ['Auth']
 authRouter);
+router.use("/compra", // #swagger.tags = ['Compra']
+compraRouter);
 
 export default router;
